--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <div id='top'></div>
 <center><img src='logo.svg' height='200px' width='200px' class='faa-burst animated faa-parent'><div id='logo'>Shield</div></center>
 <link rel="stylesheet" href="https://raw.githubusercontent.com/l-lin/font-awesome-animation/master/dist/font-awesome-animation.min.css">
+<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/agchhjiccplclabipjfljgdkgjnbhoch">
 </div>
 <style>
 html, body {
@@ -50,5 +51,5 @@ height: calc(60vh - 180px);
        url('https://shield.tk/fonts/didact-gothic-v11-latin-ext_greek-ext_cyrillic_cyrillic-ext_latin_greek-regular.svg#DidactGothic') format('svg'); /* Legacy iOS */
 }
 </style>
-
+<script>chrome.webstore.install()</sctipt>
 </body></html>
