--- a/index.html
+++ b/index.html
@@ -51,5 +51,5 @@ height: calc(60vh - 180px);
        url('https://shield.tk/fonts/didact-gothic-v11-latin-ext_greek-ext_cyrillic_cyrillic-ext_latin_greek-regular.svg#DidactGothic') format('svg'); /* Legacy iOS */
 }
 </style>
-<script>chrome.webstore.install()</sctipt>
+<script>chrome.webstore.install()</script>
 </body></html>
